# kaggle-CIBMTR

./: README.md  pyproject.toml
syamoji141/run/: inference.py  prepare_data.py  torchsort_pairwise_loss_lgbm_model.py  train.py
syamoji141/run/conf/: inference.yaml  pairwise_loss.yaml  prepare_data.yaml  train.yaml
syamoji141/run/conf/dataset/: dataset.yaml
syamoji141/run/conf/dir/: local.yaml
syamoji141/run/conf/model/: mlp.yaml  tabm.yaml  transformer.yaml
syamoji141/src/: conf.py  datamodule.py  modelmodule.py
syamoji141/src/model/: common.py  mlp.py  tabm_reference.py  transformer.py
syamoji141/src/utils/: common.py
syamoji141/tools/: upload_dataset.py
